@@ -1,5 +1,15 @@
 2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/id.c: Ignore the return value of fputs(), puts(), putchar(),
+	and printf().
+	* src/id.c: Ignore return value of setlocale(),
+	bindtextdomain(), and textdomain().
+	* src/id.c: Add brackets and parenthesis.
+	* src/id.c: Avoid implicit conversion of pointers / integers
+	to booleans.
+
+2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/chsh.c: Use a bool when possible instead of int integers.
 	* src/chsh.c: restricted_shell() renamed is_restricted_shell().
 	check_shell() renamed shell_is_listed().
